[gd_scene load_steps=8 format=2]

[ext_resource path="res://start menu.png" type="Texture" id=1]
[ext_resource path="res://Start Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/start.png" type="Texture" id=3]
[ext_resource path="res://Sprites/quit.png" type="Texture" id=4]
[ext_resource path="res://Click.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.478431, 0.231373, 0.309804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.478431, 0.231373, 0.309804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="Start Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 959.912, 539.613 )
scale = Vector2( 2.55969, 2.69811 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_bottom = 1.0
margin_top = -128.367
margin_right = 1436.0
margin_bottom = -128.367
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 518.0
margin_top = 448.0
margin_right = 918.0
margin_bottom = 632.0

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 90.0
rect_min_size = Vector2( 400, 90 )
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.847059, 0.447059, 0.368627, 1 )
text = "Start Game"
expand_icon = true

[node name="start" type="Sprite" parent="CenterContainer/VBoxContainer/StartGameButton"]
position = Vector2( 197.526, 46.7787 )
scale = Vector2( 1.71433, 2.12213 )
texture = ExtResource( 3 )

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 90 )
custom_styles/normal = SubResource( 2 )
text = "Quit Game"

[node name="quit" type="Sprite" parent="CenterContainer/VBoxContainer/QuitGameButton"]
position = Vector2( 201.774, 44.9851 )
scale = Vector2( 1.49606, 1.64749 )
texture = ExtResource( 4 )

[connection signal="button_down" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_button_down"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_button_down"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
